# accelerate-sf-board-summary

./: .env.example  .gitignore  README.md  package-lock.json  package.json
generate_chapter_summary/: generate_summary_video.ipynb  response.json
python/: embeddings.py  hashlookup.py  indexpincone.py  jsonifycaptions.py  requirements.txt  seach.py  search.py  server.py  utils.py
python-legistar-scraper/: pyproject.toml  scrape.py
python/resources/captions/: bosnov28.vtt
python/resources/captions/sfmta/: nov21.vtt  nov7.vtt  oct17.vtt
python/resources/chunkembeddings/sfmta/: nov7.json  oct17.json
python/resources/jsoncaptions/: bosnov28.json
python/resources/jsoncaptions/sfmta/: nov21.json  nov7.json  oct17.json
python/resources/jsonchunks/: bosnov28.json
python/resources/jsonchunks/sfmta/: nov21.json  nov7.json  oct17.json
src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
src/app/meeting/[meeting_id]/: page.tsx
src/app/search/: page.tsx
src/components/: nav.tsx
src/db/: get-db.ts  migrate.ts  reset.ts
src/db/migrations/: 1_initial.sql
src/db/zapatos/: schema.d.ts
src/lib/: get-video-chapters.ts  legistar-scraper.ts  search-value-provider.tsx
src/scripts/: migrate-database.ts  reset-database.ts  scrape-to-db.ts
